# causal-certificate

./: .zenodo.json  CITATION.cff  LICENSE  PUBLISHING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
experiments/wht_causality/: FINDINGS.md  confirm_wht_unsalvageable.py  report.json
paper/: main.tex
src/causal_certificate/: __init__.py  core.py
tests/: test_external_models.py
